backend/deploy/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dau-dx-api
spec:
  selector:
    app: dau-dx-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
